# CarGame

./: .gitignore  CMakeLists.txt  README.md
project/: CMakeLists.txt  lua-example-lines.cpp  lua-example.cpp
project/Car/: Background.cpp  Background.hpp  BackgroundComponent.cpp  BackgroundComponent.hpp  BirdController.cpp  BirdController.hpp  BirdGame.cpp  CMakeLists.txt  Car.cpp  Car.hpp  CarController.cpp  CarController.hpp  CarGame.cpp  CarGame.hpp  Component.cpp  EnemyComponent.cpp  EnemyComponent.hpp  FrameTiming.hpp  GameObject.cpp  GameObject.hpp  KillableComponent.cpp  KillableComponent.hpp  PhysicsComponent.cpp  PhysicsComponent.hpp  PowerupComponent.cpp  PowerupComponent.hpp  README.md  ScrollingCamera.cpp  ScrollingCamera.hpp  SideScrollingCamera.cpp  SideScrollingCamera.hpp  SpriteAnimationComponent.cpp  SpriteAnimationComponent.hpp  car.json  main.cpp
project/Car/components/: Car.cpp  Car.hpp  EnemyComponent.cpp  EnemyComponent.hpp  KillableComponent.cpp  KillableComponent.hpp  PhysicsComponent.cpp  PhysicsComponent.hpp  PowerupComponent.cpp  PowerupComponent.hpp  ScrollingCamera.cpp  ScrollingCamera.hpp  SpriteAnimationComponent.cpp  SpriteAnimationComponent.hpp  SpriteComponent.cpp  SpriteComponent.hpp
project/Car/sprites/: project.tps
project/platformer/: CMakeLists.txt
